# haskell-misc

./: .gitignore  argv.hs  histogram.hs  mjd-assoc-hashmap.hs  package.yaml  practice_hashmap.hs  rev.hs
boilerplate/: README.md  syb.hs
dice-strategy/: ds.hs  ds2.hs
haskell-bootcamp/: package.yaml
haskell-bootcamp/app/: Quickcheck.hs
haskell-bootcamp/src/: MJDAssocMap.hs  MJDVectorMap.hs
haskell-bootcamp/test/: Spec.hs
isomorphism/: iso.hs  noniso.hs
monad-stacking/: CHANGELOG.md  LICENSE  README.md  monad-stacking.cabal  package.yaml
monad-stacking/app/: Main.hs
monad-stacking/src/: DirList.hs  LoggingStateT.hs  MJDState-failed.hs  MJDState.hs  Runnable.hs
monad-stacking/test/: Hacking.hsxxx  Spec.hs
rock-paper-scissors/: MJDRandom.hs  Main.hs  RPS.hs  RPSgame.hs  rand-misc.cabal
test/: Spec.hs
