cabal-version:      2.4
name:               rps
version:            0.2.0.0

-- A short (one-line) description of the package.
synopsis: Play rock-paper-scissors game

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mark Dominus
maintainer:         mjd@leapyear.io

-- A copyright notice.
copyright: Copyright ©2022 LeapYear.io
-- category:
extra-source-files: CHANGELOG.md

executable game
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, random, transformers
    hs-source-dirs:   .
    default-language: Haskell2010
    other-modules: MJDRandom, RPS, RPSGame
